fixing alignment of logo

--- a/egw_fw.css
+++ b/egw_fw.css
@@ -37,7 +37,7 @@ body {
 	height: 42px;
 	position: relative;
 	text-align: center;
-	padding-left: 12px;
+	padding-left: 5px;
 	width: 220px;
 }
 
